fix: Agregar todos los dominios de Vercel a CORS - incluye preview deployments